# sandbox_c-

./: .cproject  .gitignore  CMakeLists.txt
algorithms/: linked_list.cpp
boost/: apples.xcf  apples_64.ppm  apples_64_fgbg.ppm  apples_64_n.ppm  apples_64_seg.ppm  apples_64_seg02.ppm  apples_manual_weights.ppm  apples_manual_weights.xcf  bgl_01.cpp  bgl_02  bgl_02.cpp  bgl_03  bgl_03.cpp  custom_01.xcf  custom_01_fgbg.ppm  custom_01_n.ppm  custom_01_seg.ppm  heap.cpp  loadJpeg.cpp  ppm  ppm.cpp  scoped_ptr.cpp
boost/image_segmentation/: image_segmentation  image_segmentation.cpp  ppm.h
boost/image_segmentation/images/: custom_01_input.ppm
boost/image_segmentation/images/source/: apples.xcf  apples_1024.ppm  apples_manual_weights02.xcf
codility/: equileader  equileader.cpp  fish  fish.cpp  line_intersection_1  line_intersection_1.cpp  line_intersection_2  line_intersection_2.cpp  nesting  nesting.cpp  rand_input  rand_input.cpp  stack_machine_1  stack_machine_1.cpp  stone_wall  stone_wall.cpp
graph/: bfs  bfs.cpp
ideserve/: merge_two_sorted_linked_lists.cpp
linked_list/: .cproject  linked_list.cpp
stl/: CMakeLists.txt  algorithms.cpp  containers.cpp  lambda.cpp  mutex.cpp  uniform_initialization.cpp
